// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 2`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Item 1
        </h6>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Item 2
        </h6>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Item 3
        </h6>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 3`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item (standard)
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 vnEHO"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item (selected)
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={true}
    href={null}
    id={null}
    onClick={null}
    tabIndex="-1"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item (disabled)
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 4`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item (interaction disabled)
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 5`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 eTIRkY"
      >
        <div
          alt={null}
          className="Avatar__TagContainer-sc-1vuf9om-1 hjvHco"
          id={null}
          label="AB"
          onClick={null}
          src={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO Avatar__AvatarText-sc-1vuf9om-0 hhCXJq"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            AB
          </h6>
        </div>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 jISerZ"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 eTIRkY"
      >
        <div
          alt={null}
          className="Avatar__TagContainer-sc-1vuf9om-1 hjvHco"
          id={null}
          label="CD"
          onClick={null}
          src={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO Avatar__AvatarText-sc-1vuf9om-0 hhCXJq"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            CD
          </h6>
        </div>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 jISerZ"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 eTIRkY"
      >
        <div
          alt={null}
          className="Avatar__TagContainer-sc-1vuf9om-1 hjvHco"
          id={null}
          label="EF"
          onClick={null}
          src={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO Avatar__AvatarText-sc-1vuf9om-0 hhCXJq"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            EF
          </h6>
        </div>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 jISerZ"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 eTIRkY"
      >
        <div
          alt={null}
          className="Avatar__TagContainer-sc-1vuf9om-1 hjvHco"
          id={null}
          label="GH"
          onClick={null}
          src={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO Avatar__AvatarText-sc-1vuf9om-0 hhCXJq"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            GH
          </h6>
        </div>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 jISerZ"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 6`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 dSTdeN"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kHYCoh"
      >
        <div
          className="Switch__SwitchContainer-sc-1bvlvzt-0 kJWxTM"
          disabled={false}
          id={null}
          label="Toggle 1"
          onClick={[Function]}
        >
          <div
            checked={false}
            className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
            disabled={false}
            onChange={null}
          >
            <div
              checked={false}
              className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
              disabled={false}
            />
          </div>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
            fontSize="0.876em"
            fontWeight={400}
            htmlFor={null}
            letterSpacing="0px"
          >
            Toggle 1
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 dSTdeN"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kHYCoh"
      >
        <div
          className="Switch__SwitchContainer-sc-1bvlvzt-0 kJWxTM"
          disabled={false}
          id={null}
          label="Toggle 2"
          onClick={[Function]}
        >
          <div
            checked={false}
            className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
            disabled={false}
            onChange={null}
          >
            <div
              checked={false}
              className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
              disabled={false}
            />
          </div>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
            fontSize="0.876em"
            fontWeight={400}
            htmlFor={null}
            letterSpacing="0px"
          >
            Toggle 2
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 dSTdeN"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kHYCoh"
      >
        <div
          className="Switch__SwitchContainer-sc-1bvlvzt-0 hGOHyg"
          disabled={false}
          id={null}
          label={null}
          onClick={[Function]}
        >
          <div
            checked={false}
            className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
            disabled={false}
            onChange={null}
          >
            <div
              checked={false}
              className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
              disabled={false}
            />
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 dSTdeN"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kHYCoh"
      >
        <div
          className="Switch__SwitchContainer-sc-1bvlvzt-0 kJWxTM"
          disabled={false}
          id={null}
          label="Toggle 4"
          onClick={[Function]}
        >
          <div
            checked={false}
            className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
            disabled={false}
            onChange={null}
          >
            <div
              checked={false}
              className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
              disabled={false}
            />
          </div>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
            fontSize="0.876em"
            fontWeight={400}
            htmlFor={null}
            letterSpacing="0px"
          >
            Toggle 4
          </label>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 7`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 dSTdeN"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kHYCoh"
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
          id={null}
          label="Label"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Label
          </p>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 dSTdeN"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kHYCoh"
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
          id={null}
          label="6"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            6
          </p>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 dSTdeN"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kHYCoh"
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
          id={null}
          label="NEW!"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            NEW!
          </p>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 dSTdeN"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kHYCoh"
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
          id={null}
          label="9"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            9
          </p>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 8`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 dSTdeN"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kHYCoh"
      >
        <div
          className="Checkbox__CheckboxContainer-sc-1gwp7am-1 gughwT"
          disabled={false}
        >
          <input
            checked={null}
            className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
            id="Box 1"
            onBlur={null}
            onChange={null}
            onFocus={null}
            type="checkbox"
          />
          <label
            className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
            fontSize="0.876em"
            fontWeight={400}
            htmlFor="Box 1"
            letterSpacing="0px"
          >
            Box 1
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 dSTdeN"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kHYCoh"
      >
        <div
          className="Checkbox__CheckboxContainer-sc-1gwp7am-1 gughwT"
          disabled={false}
        >
          <input
            checked={null}
            className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
            id="Box 2"
            onBlur={null}
            onChange={null}
            onFocus={null}
            type="checkbox"
          />
          <label
            className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
            fontSize="0.876em"
            fontWeight={400}
            htmlFor="Box 2"
            letterSpacing="0px"
          >
            Box 2
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 dSTdeN"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kHYCoh"
      >
        <div
          className="Checkbox__CheckboxContainer-sc-1gwp7am-1 gughwT"
          disabled={false}
        >
          <input
            checked={null}
            className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
            id="Box 3"
            onBlur={null}
            onChange={null}
            onFocus={null}
            type="checkbox"
          />
          <label
            className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
            fontSize="0.876em"
            fontWeight={400}
            htmlFor="Box 3"
            letterSpacing="0px"
          >
            Box 3
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 dSTdeN"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
          fontSize="0.95em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kHYCoh"
      >
        <div
          className="Checkbox__CheckboxContainer-sc-1gwp7am-1 gughwT"
          disabled={false}
        >
          <input
            checked={null}
            className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
            id="Box 4"
            onBlur={null}
            onChange={null}
            onFocus={null}
            type="checkbox"
          />
          <label
            className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
            fontSize="0.876em"
            fontWeight={400}
            htmlFor="Box 4"
            letterSpacing="0px"
          >
            Box 4
          </label>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 9`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={true}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <a
          className="Bar__LinkedWrapper-sc-1c4axau-0 jRiLNT"
          onClick={true}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            List Item
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
            fontSize="0.95em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            This is the description
          </p>
        </a>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={true}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <a
          className="Bar__LinkedWrapper-sc-1c4axau-0 jRiLNT"
          onClick={true}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            List Item
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
            fontSize="0.95em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            This is the description
          </p>
        </a>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={true}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <a
          className="Bar__LinkedWrapper-sc-1c4axau-0 jRiLNT"
          onClick={true}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            List Item
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
            fontSize="0.95em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            This is the description
          </p>
        </a>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={true}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 jMyIKL"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 ejlqvW"
      >
        <a
          className="Bar__LinkedWrapper-sc-1c4axau-0 jRiLNT"
          onClick={true}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            List Item
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 iAFFUA"
            fontSize="0.95em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            This is the description
          </p>
        </a>
      </div>
    </div>
  </li>
</ul>
`;
